--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Michael Scott Paper Company Inc.</title>
 
     <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <script src="javascript/script.js"></script>
 </head>
 <body>
     <div id="content">
@@ -20,9 +21,10 @@
         </div>
 
         <div id="login">
-            <form>
-                <label for="login">Login: </label><input type="text" name="login">
+            <form name="user_login" onsubmit="return validateForm()">
+                <label for="username">Username: </label><input type="text" name="username">
                 <label for="password">Password: </label><input type="password" name="password">
+                <input type="submit" name="login_submit" value="Submit">
             </form>
         </div>
 
